Update extensions-main module for java 21.  Update readme.